# cairns

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md  store-design.md
examples/: failure_resume.py  hitl.py  research_fake_llm.py  research_haiku.py  rlhf_mock.py  scraper.py
scripts/: release_version.py
src/cairn/core/: __init__.py  context.py  hash.py  lock.py  serial.py  sink.py  step.py  store.py  types.py
src/cairn/ext/: claude.py
src/cairn/run/: __init__.py  gc.py  show.py  spans.py
src/cairn/tui/: app.py
src/cairns/: __init__.py  testing.py
src/cairns/cli/: __init__.py
src/cairns/core/: __init__.py  cairn.py  hash.py  lock.py  runtime.py  serial.py  sink.py  step.py  store.py  types.py
src/cairns/ext/: claude.py
src/cairns/interaction/: __init__.py
src/cairns/patterns/: __init__.py  semver.py
src/cairns/run/: __init__.py  gc.py  show.py  spans.py
src/cairns/tui/: __init__.py  app.py  messages.py  render.py  sinks.py  widgets.py
tests/: test_core.py  test_disk.py  test_gc.py  test_hash.py  test_metrics.py  test_patterns.py  test_resume.py  test_serial.py
