[project]
name = "cairns"
version = "0.2.0"
description = "Compute graph orchestration with caching and observability"
requires-python = ">=3.12"

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0"
]
tui = [
    "textual>=3.0",
    "rich>=13.0"
]
semver = [
    "semver>=3.0"
]
full = [
    "cairns[tui,pydantic]"
]
dev = [
    "cairns[full]",
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "import-linter>=2.0",
]

[project.scripts]
cairns = "cairns.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairns"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = ".devenv/state"
venv = "venv"
exclude = ["src/cairns/tui/"]

[tool.importlinter]
root_packages = ["cairns"]

[[tool.importlinter.contracts]]
name = "Cairns layering"
type = "layers"
layers = [
    "cairns.cli",
    "cairns.tui",
    "cairns.run",
    "cairns.interaction",
    "cairns.core",
]
