[project]
name = "cairns"
version = "0.2.5"
description = "Compute graph orchestration with caching and observability"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Mathijs Henquet", email = "mathijs.henquet@gmail.com" }]
keywords = [
    "compute-graph",
    "caching",
    "tracing",
    "observability",
    "pipeline",
    "workflow",
    "async",
    "agents",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mathijshenquet/cairns"
Repository = "https://github.com/mathijshenquet/cairns"
Issues = "https://github.com/mathijshenquet/cairns/issues"

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
tui = ["textual>=3.0", "rich>=13.0"]
semver = ["semver>=3.0"]
full = ["cairns[tui,pydantic]"]
dev = [
    "cairns[full]",
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "import-linter>=2.0",
]

[project.scripts]
cairns = "cairns.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairns"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
# venv auto-detected via $VIRTUAL_ENV (set by `uv run`, devenv/direnv, etc.)
# so the same config works locally and in CI.
include = ["src"]
exclude = [
    "src/cairns/tui/",
    "**/__pycache__",
    "**/.venv",
    "**/.devenv",
    "**/.direnv",
    "**/dist",
    "**/build",
    "**/.cairn",
    "**/.cairns",
]

[tool.importlinter]
root_packages = ["cairns"]

[[tool.importlinter.contracts]]
name = "Cairns layering"
type = "layers"
layers = [
    "cairns.cli",
    "cairns.tui",
    "cairns.run",
    "cairns.interaction",
    "cairns.core",
]
# `Runtime` exposes `.run()` / `.arun()` as a thin facade that delegates into
# `cairns.run` (lazy imports avoid import-time cycle). Whitelist those edges.
ignore_imports = [
    "cairns.core.runtime -> cairns.run",
]
